feat: 提供 JavaFX 依赖自动化构建